2005-06-07  Naba Kumar  <naba@gnome.org>

	Patch from: Massimo Cora'  <maxcvs@email.it>:
	* plugins/class-inheritance/Makefile.am,
	plugins/class-inheritance/class-inherit.c,
	plugins/class-inheritance/class-inherit.h,
	plugins/class-inheritance/plugin.c,
	plugins/class-inheritance/plugin.h,
	(added) plugins/class-inheritance/class-callbacks.[ch]: Implemented
	expanded view of classes in hierarchy canvas (collapsable again).
	

2005-06-05  Johannes Schmid <jhs@cvs.gnome.org>

	* scintilla/patches/scintilla-64-bit.diff (added)
	* plugins/patch/patch-plugin.c:
	Conditional build for GTK 2.4 and GTK 2.6

2005-06-04  Sebastien Granjoux  <seb.sfo@free.fr>

	* plugins/tools/anjuta-tools.glade,
	plugins/tools/editor.c,
	plugins/tools/plugin.h,
	plugins/tools/fileop.c:
	Add a check box to edit an user script
	Correct a few memory leak

	* plugins/tools/execute.c,
	plugins/tools/tool.c,
	plugins/tools/tool.h:
	Move utility remove_mnemonic function in tool.c
	Small fix

2005-06-04  Johannes Schmid <jhs@cvs.gnome.org>

	Patch from sbrabec@suse.cz:
	* configure.in
	scintilla/include/Scintilla.h:
	
	Fix 64-Bit warnings in gcc 4

2005-06-03  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/patch/patch_plugin.c
	plugins/patch/patch.h
	plugin/patch/patch-plugin.glade
	plugin/patch/Makefile.am:
	
	Changed patch plugin to use libglade and new gtk 2.6 widgets

2005-05-31  Naba Kumar  <naba@gnome.org>

	Patch from Jason Bayman  <JBayman@HobbitHell.com>:
	* plugins/editor/text_editor.c: Don't show error
	for empty files.
	
2005-05-28  Sebastien Granjoux  <seb.sfo@free.fr>
	
	* plugins/message-view/anjuta-message-manager.ui,
	plugins/message-view/anjuta-msgman.c,
	plugins/message-view/anjuta-msgman.h,
	plugins/message-view/message-view.c,
	plugins/message-view/message-view.h,
	plugins/message-view/plugin.c:
	Add a popup menu in messages panes
	Move save message pane option in it

2005-05-28  Naba Kumar  <naba@gnome.org>

	* data/properties/styles.properties: Fixed default font